--- a/css/main.css
+++ b/css/main.css
@@ -86,17 +86,20 @@ ul {
 
 .container {
     width: 1600px;
-    height: 786px;
-    background: rgb(91,123,198);
-    background: linear-gradient(180deg, rgba(91,123,198,1) 0%, rgba(184,172,218,1) 84%, rgba(69,132,227,1) 100%);
+    height: 836px;
+    /* background: rgb(91,123,198);
+    background: linear-gradient(180deg, rgba(91,123,198,1) 0%, rgba(184,172,218,1) 84%, rgba(69,132,227,1) 100%); */
+    background-image: url("../images/img.png");
     margin: 0 auto;
+    background-repeat:no-repeat ;
 }
 
 .container h1 {
+    /* 제17회 부산불꽃축제 */
     font-size: 90px;
     color: #ffffff;
     text-align: center;
-    padding-top: 90px;
+    padding-top: 80px;
 }
 
 .container h2 {
@@ -104,8 +107,8 @@ ul {
     font-size: 36px;
     color: #ffffff;
     text-align: center;
-    padding-top: 25px;
-    padding-bottom: 60px;
+    padding-top: 10px;
+    padding-bottom: 20px;
 }
 
 .container .woro {
@@ -141,15 +144,27 @@ ul {
 }
 
 .container h4 {
-    padding-top: 60px;
+    /* 17회 부산불꽃축제가 2022년 12월 17일 토요일 재개됩니다. */
+    padding-top: 20px;
     color: #fdffff;
     font-size: 36px;
     text-align: center;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
 }
 
 .container p {
+    /* 불꽃이 내리는 부산!
+    세계인과 함께하는 부산불꽃축제로 여러분을 초대합니다. */
     font-size: 30px;
     color: #ffffff;
     text-align: center;
+    padding-bottom: 250px;
+}
+
+.container .wbox_01 {
+    width: 1302px;
+    height: 74px;
+    background-color: #f6f7f9;
+    margin: 0 auto;
+    box-shadow: 5px 5px 5px hsl(0deg 0% 0% / 0.75);
 }
