--- a/css/main.css
+++ b/css/main.css
@@ -1,202 +1,202 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
-a:hover {}
+a:hover {
+}
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 .body {
-    font-family: 'Noto Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
 }
 
 .title {
-    display: flex;
-    margin: 0 auto;
-    width: 1600px;
-    height: 70px;
+  display: flex;
+  margin: 0 auto;
+  width: 1600px;
+  height: 70px;
 }
 
 .head {
-    background-color: #0050a0;
-    width: 182px;
-    height: 160px;
-    margin: 0 0 0 199px; 
+  background-color: #0050a0;
+  width: 182px;
+  height: 160px;
+  margin: 0 0 0 199px;
 }
 
-
-
 .head img {
-    width: 74px;
-    margin: 30px 0 0 55px;
+  width: 74px;
+  margin: 30px 0 0 55px;
 }
 
 .head h1 {
-    color: #f3f7fb;
-    font-size: 18px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  color: #f3f7fb;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.menu {}
+.menu {
+}
 
 .menu ul {
-    display: flex;
-    padding: 24px 30px;
+  display: flex;
+  padding: 24px 30px;
 }
 
 .menu ul li a {
-    margin: 35px;
-    color: #666666;
+  margin: 35px;
+  color: #666666;
 }
 
 .lan {
-    display: flex;    
+  display: flex;
 }
 
 .lan p {
-    margin-top: 24px;
-    color: #666666;
+  margin-top: 24px;
+  color: #666666;
 }
 
 .lan .line {
-    border-right: 1px solid #666666;
-    margin-bottom: 115px;
-    margin-left: 20px;
-    margin-right: 20px;
-} 
-.lan img { 
-    width: 33px;
-    height: 33px;
-    margin: 10px;
+  border-right: 1px solid #666666;
+  margin-bottom: 115px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.lan img {
+  width: 33px;
+  height: 33px;
+  margin: 10px;
 }
 
 .container {
-    width: 1600px;
-    height: 836px;
-    background-image: url("../images/img.png");
-    margin: 0 auto;
-    background-repeat:no-repeat ;
+  width: 1600px;
+  height: 836px;
+  background-image: url("../images/img.png");
+  margin: 0 auto;
+  background-repeat: no-repeat;
 }
 
 .container h1 {
-    /* 제17회 부산불꽃축제 */
-    font-size: 90px;
-    color: #ffffff;
-    text-align: center;
-    padding-top: 80px;
+  /* 제17회 부산불꽃축제 */
+  font-size: 90px;
+  color: #ffffff;
+  text-align: center;
+  padding-top: 80px;
 }
 
 .container h2 {
-    /* 2022.12.17.토. 광안리해수욕장 일원 */
-    font-size: 36px;
-    color: #ffffff;
-    text-align: center;
-    padding-top: 10px;
-    padding-bottom: 20px;
+  /* 2022.12.17.토. 광안리해수욕장 일원 */
+  font-size: 36px;
+  color: #ffffff;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 20px;
 }
 
 .container .woro {
-    display: flex;
+  display: flex;
 }
 
 .container .line_02 {
-    margin-top: 20px;
-    margin-left: 300px;
-    width: 410px;
-    height: 1px;
-    background-color: #f3f7fb;
+  margin-top: 20px;
+  margin-left: 300px;
+  width: 410px;
+  height: 1px;
+  background-color: #f3f7fb;
 }
 
 .container .woro .wbox {
-    width: 183px;
-    height: 52px;
-    background-color: #f6f7f9;
-    border-radius: 52px;
+  width: 183px;
+  height: 52px;
+  background-color: #f6f7f9;
+  border-radius: 52px;
 }
 
 .container .woro .wbox h3 {
-    color: #3551b4;
-    text-align: center;
-    font-size: 30px;
+  color: #3551b4;
+  text-align: center;
+  font-size: 30px;
 }
 
 .container .line_03 {
-    margin-top: 20px;
-    width: 410px;
-    height: 1px;
-    background-color: #f3f7fb;
+  margin-top: 20px;
+  width: 410px;
+  height: 1px;
+  background-color: #f3f7fb;
 }
 
 .container h4 {
-    /* 17회 부산불꽃축제가 2022년 12월 17일 토요일 재개됩니다. */
-    padding-top: 20px;
-    color: #fdffff;
-    font-size: 36px;
-    text-align: center;
-    padding-bottom: 20px;
+  /* 17회 부산불꽃축제가 2022년 12월 17일 토요일 재개됩니다. */
+  padding-top: 20px;
+  color: #fdffff;
+  font-size: 36px;
+  text-align: center;
+  padding-bottom: 20px;
 }
 
 .container p {
-    /* 불꽃이 내리는 부산!
+  /* 불꽃이 내리는 부산!
     세계인과 함께하는 부산불꽃축제로 여러분을 초대합니다. */
-    font-size: 30px;
-    color: #ffffff;
-    text-align: center;
-    padding-bottom: 250px;
+  font-size: 30px;
+  color: #ffffff;
+  text-align: center;
+  padding-bottom: 250px;
 }
 
 .container .wbox_01 {
-    width: 1302px;
-    height: 74px;
-    background-color: #f6f7f9;
-    margin: 0 auto;
-    box-shadow: 5px 5px 5px hsl(0deg 0% 0% / 0.75);
-    position: relative;
-    padding-bottom: 71px;
+  width: 1302px;
+  height: 74px;
+  background-color: #f6f7f9;
+  margin: 0 auto;
+  box-shadow: 5px 5px 5px hsl(0deg 0% 0% / 0.75);
+  position: relative;
+  padding-bottom: 71px;
 }
 
 .container .wbox_01 .p_1 {
-    color: #000;
-    font-size: 26px;
-    position: absolute;
-    top: 15px;
-    left: 44px;
+  color: #000;
+  font-size: 26px;
+  position: absolute;
+  top: 15px;
+  left: 44px;
 }
 
 .container .wbox_01 .p_2 {
-    color: #000;
-    font-size: 26px;
-    position: absolute;
-    top: 15px;
-    right: 44px;
+  color: #000;
+  font-size: 26px;
+  position: absolute;
+  top: 15px;
+  right: 44px;
 }
 
 .container .wbox_01 img {
-    width: 8px;
-    height: 16px;
-    padding: 1px;
+  width: 8px;
+  height: 16px;
+  padding: 1px;
 }
 
 .conduct ul {
-    display: flex;
+  display: flex;
 }
 
 .conduct ul li {
-    width: 314px;
-    height: 372px;
-    background-color: red;
-    margin: 10px;
+  width: 314px;
+  height: 372px;
+  margin: 10px;
+  border: 1px solid #e2e6e6;
 }
