--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,6 @@ a {
   color: inherit;
 }
 
-a:hover {
-}
-
 ul {
   list-style: none;
 }
@@ -22,11 +19,24 @@ ul {
   font-family: 'Noto Sans KR', sans-serif;
 }
 
+.title_all {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  height: 70px;
+  background-color: #fff;
+  z-index: 1;
+}
+
 .title {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
-  margin: 0 auto;
   width: 1600px;
   height: 70px;
+  z-index: 1;
 }
 
 .head {
@@ -47,9 +57,6 @@ ul {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.menu {
 }
 
 .menu ul {
@@ -89,6 +96,7 @@ ul {
   background-image: url('../images/img.png');
   margin: 0 auto;
   background-repeat: no-repeat;
+  padding-top: 70px;
 }
 
 .container h1 {
@@ -155,7 +163,7 @@ ul {
   font-size: 30px;
   color: #ffffff;
   text-align: center;
-  padding-bottom: 250px;
+  padding-bottom: 180px;
 }
 
 .container .wbox_01 {
@@ -721,7 +729,7 @@ ul {
 }
 
 .footer_top .center_box {
-  width: 1300px;
+  width: 1100px;
   height: 569px;
   margin: 0 auto;
 }
@@ -756,20 +764,140 @@ ul {
   gap: 10px;
 }
 
-.footer_top .menu {
+.footer_top .menus {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 227px;
+  margin-top: 52px;
 }
 
-.footer_top .menu li {
+.footer_top .menus li {
   font-size: 20px;
+  color: #fff;
+  width: 323px;
+}
+
+.footer_top .menus > li > ul {
+  display: inline-block;
+  padding-top: 30px;
+}
+
+.footer {
+  width: 100%;
+  height: 262px;
+  background-color: #161616;
+}
+
+.footer_content {
+  width: 1200px;
+  height: 262px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.footer_content .footer_title {
+  position: absolute;
+  top: 30px;
+  left: 0;
+  font-size: 24px;
   color: #fff;
 }
 
-.footer_top .menu > li > ul {
-  display: block;
+.footer_content .footer_icon {
+  position: absolute;
+  top: 30px;
+  right: 250px;
+  display: flex;
+  gap: 25px;
+}
+
+.footer_content ul li {
+  font-size: 26px;
+  color: #fff;
+  font-weight: 700;
+}
+
+.footer_content p {
+  font-size: 14px;
+  color: #fff;
+  font-weight: 700;
+  position: absolute;
+  top: 40px;
+  right: 125px;
+}
+
+.footer_content .f_line {
+  height: 1px;
+  width: 10px;
+  background-color: #8b8b8b;
+  position: absolute;
+  top: 55px;
+  right: 103px;
+}
+
+.footer_content .n1330 {
+  font-size: 40px;
+  color: #f30099;
+  font-weight: 700;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.footer_content .f_box {
+  width: 1000px;
+  height: 60px;
+  border: 1px solid #fff;
+  position: absolute;
+  top: 90px;
+}
+
+.footer_content .f_box ul {
+  display: flex;
+  margin-top: 20px;
+  margin-left: 50px;
+  gap: 25px;
+}
+
+.footer_content .f_box ul li {
+  color: #fff;
+  font-size: 14px;
+}
+
+.footer_content .f_box ul li:first-child {
+  color: #4290d8;
+}
+
+.footer_content .f_box2 {
+  width: 200px;
+  height: 60px;
+  border: 1px solid #fff;
+  position: absolute;
+  top: 90px;
+  right: 0;
+  display: flex;
+}
+
+.f_box2 .f_box2_p {
+  color: #fff;
+  font-size: 14px;
+  padding: 20px;
+}
+
+.f_box2 .f_box2_p2 {
+  color: #fff;
+  font-size: 14px;
+  padding: 20px;
+}
+
+.footer_content .copyright_top {
+  font-size: 13px;
+  color: #bababa;
+  position: absolute;
+  bottom: 70px;
+}
+
+.copyright_top .address {
+  padding-right: 12px;
+  border-right: 1px solid;
 }
 
 .top {
