--- a/css/main.css
+++ b/css/main.css
@@ -893,18 +893,56 @@ ul {
   color: #bababa;
   position: absolute;
   bottom: 70px;
+  display: flex;
 }
 
 .copyright_top .address {
-  padding-right: 12px;
-  border-right: 1px solid;
+  margin-right: 10px;
+  padding-right: 14px;
+  position: relative;
+}
+
+.copyright_top .address:after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 1px;
+  height: 12px;
+  background: rgba(255, 255, 255, 0.4);
+  right: 0;
+  top: 3px;
+}
+
+.copyright_top .tel {
+  margin-right: 10px;
+  padding-right: 14px;
+  position: relative;
+}
+
+.copyright_top .tel:after {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 1px;
+  height: 12px;
+  background: rgba(255, 255, 255, 0.4);
+  right: 0;
+  top: 3px;
+}
+
+.copyright {
+  font-size: 13px;
+  color: #bababa;
+  position: absolute;
+  bottom: 48px;
 }
 
 .top {
   position: fixed;
-  right: 11%;
+  right: 5%;
   bottom: 2%;
-  width: 874px;
+  width: 74px;
   height: 74px;
   background: url(../images/TOP.png);
+  background-repeat: no-repeat;
 }
