--- a/css/main.css
+++ b/css/main.css
@@ -470,6 +470,42 @@ ul {
   position: relative;
 }
 
+.youtube ul li .y_01 {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.youtube ul li .y_01m {
+  opacity: 1;
+}
+
+.youtube ul li .y_01i {
+  opacity: 2;
+}
+
+.youtube ul li .y_01i:hover {
+  opacity: 0;
+}
+
+.youtube ul li .y_02 {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.youtube ul li .y_02m {
+  opacity: 1;
+}
+
+.youtube ul li .y_02i {
+  opacity: 2;
+}
+
+.youtube ul li .y_02i:hover {
+  opacity: 0;
+}
+
 .youtube ul li .text {
   font-size: 17px;
   color: #666;
