--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ ul {
   background-color: #fff;
   z-index: 1;
 }
-
+/* position: fixed;를 사용하여 상단바가 따라 내려오게 하였습니다. */
 .title {
   position: fixed;
   left: 50%;
@@ -50,7 +50,7 @@ ul {
   width: 74px;
   margin: 30px 0 0 55px;
 }
-
+/* margin으로 로고를 위치를 지정했습니다. */
 .head h1 {
   color: #f3f7fb;
   font-size: 18px;
