--- a/css/main.css
+++ b/css/main.css
@@ -102,8 +102,9 @@ body {
 .background .bul {
   position: relative;
   padding-top: 70px;
-  width: 1600px;
-  height: auto;
+  width: auto;
+  height: 786px;
+  display: flex;
 }
 
 .background .bli {
@@ -111,18 +112,30 @@ body {
   height: 786px;
 }
 
-.background .bli_01 {
-  background-image: url(../images/img.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+.bli img {
+  width: 1600px;
+  height: 786px;
 }
 
-.background .bli_02 {
-  background-image: url(../images/2030busan.jpg);
-  background-repeat: no-repeat;
+.background .bli_01 {
+  /* background-image: url(../images/img.png); */
+  /* background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  position: absolute;
+  top: 0; */
+}
+
+.background .bli_02 img {
+  /* width: 1600px;
+  height: 786px; */
+  /* background-image: url(../images/2030busan.jpg); */
+  /* background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  left: 1600px;
+  top: 0; */
 }
 
 /* wbox_01 */
