--- a/css/main.css
+++ b/css/main.css
@@ -1,89 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-ul {
-  list-style: none;
-}
-
-body {
-  font-family: 'Noto Sans KR', sans-serif;
-}
-
-.header {
-  display: flex;
-  position: fixed;
-  top: 0;
-  left: 0;
-  display: flex;
-  width: 100%;
-  height: 70px;
-  z-index: 2;
-  background-color: #fff;
-}
-
-.header_nav {
-  display: flex;
-}
-
-.logo {
-  background-color: #0050a0;
-  width: 182px;
-  height: 160px;
-  margin: 0 0 0 199px;
-  text-align: center;
-}
-
-.logo > img {
-  width: 74px;
-  margin-top: 30px;
-}
-
-.logo > h1 {
-  color: #f3f7fb;
-  font-size: 18px;
-}
-
-.menu ul {
-  display: flex;
-  padding: 24px 30px;
-}
-
-.menu ul li a {
-  margin: 35px;
-  color: #666666;
-}
-
-.lan {
-  float: right;
-  display: flex;
-}
-
-.lan p {
-  margin-top: 24px;
-  color: #666666;
-}
-
-.lan img {
-  width: 33px;
-  height: 33px;
-  margin: 10px;
-}
-
-.bars {
-  display: none;
-  font-size: 36px;
-}
-
 /* container */
 
 .background {
@@ -119,7 +33,7 @@ body {
 
 /* wbox_01 */
 .wbox_01 {
-  max-width: 1300px;
+  width: 1300px;
   height: 74px;
   background-color: #f6f7f9;
   margin: 0 auto;
@@ -396,7 +310,7 @@ body {
 }
 
 .number::after {
-  content: '/2';
+  content: "/2";
   color: #1f609b;
 }
 
@@ -665,7 +579,7 @@ body {
 }
 
 .blue {
-  background-image: url('../images/Shape.png');
+  background-image: url("../images/Shape.png");
   background-repeat: no-repeat;
   background-position: -404px -270px;
   height: 371px;
@@ -948,7 +862,7 @@ body {
 }
 
 .copyright_top .address:after {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   width: 1px;
@@ -965,7 +879,7 @@ body {
 }
 
 .copyright_top .tel:after {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   width: 1px;
